--- a/src/components/landing/Header.astro
+++ b/src/components/landing/Header.astro
@@ -1,45 +1,12 @@
 ---
-import { Menu } from "lucide-react";
+import Topbar from "../ui/Topbar.astro";
 ---
 
 <section>
-  <div class="mx-auto max-w-7xl px-8 pt-12 pb-12 lg:pt-24">
-    <div class="mx-auto max-w-xl">
+  <div class="mx-auto max-w-7xl px-8 pt-12 pb-12 lg:pt-24 bg-green-200">
+    <div class="mx-auto max-w-xl bg-blue-200">
       <div>
-        <div class="md:flex md:items-center md:justify-between md:space-x-5">
-          <div class="flex items-center space-x-5">
-            <div class="flex-shrink-0">
-              <div class="relative">
-                <img
-                  class="h-16 w-16 lg:h-24 lg:w-24 rounded-full border border-white/10"
-                  src="/images/circle-logo.png"
-                  alt="image"
-                />
-                <span
-                  class="absolute inset-0 rounded-full shadow-inner"
-                  aria-hidden="true"></span>
-              </div>
-            </div>
-
-            <div class="pt-1.5">
-              <h1 class="lg:text-xl text-black dark:text-white">
-                💻 Alexander Farfán Navarro
-              </h1>
-              <h2 class="text-sm font-light text-neutral-500">
-                Ingeniero de Software | Físico
-              </h2>
-              <p>
-                <a
-                  class="text-xs underline hover:no-underline duration-200 dark:text-white"
-                  href="https://alexfarfan.site/">alexfarfan.site</a
-                >
-              </p>
-            </div>
-            <button id="toggle-theme" class="bg-red-800 text-white">
-              <Menu size="24" />
-            </button>
-          </div>
-        </div>
+        <Topbar />
         <div class="mt-16 text-sm font-light">
           <p class="text-black dark:text-white font-semibold">Acerca de mí</p>
           <div class="text-neutral-500 dark:text-neutral-400 space-y-3 mt-3">
