New Feature: Header Sticky and animated

--- a/src/components/landing/Header.astro
+++ b/src/components/landing/Header.astro
@@ -1,13 +1,8 @@
----
-import Topbar from "../ui/Topbar.astro";
----
-
 <section>
-  <div class="mx-auto max-w-7xl px-8 pt-12 pb-12 lg:pt-24 bg-green-200">
-    <div class="mx-auto max-w-xl bg-blue-200">
+  <div class="mx-auto max-w-7xl px-8 pb-12">
+    <div class="mx-auto max-w-xl">
       <div>
-        <Topbar />
-        <div class="mt-16 text-sm font-light">
+        <div class="pt-16 text-sm font-light">
           <p class="text-black dark:text-white font-semibold">Acerca de mí</p>
           <div class="text-neutral-500 dark:text-neutral-400 space-y-3 mt-3">
             <p>
