--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,6 @@
 import BaseHead from "../components/BaseHead.astro";
 import ToggleTheme from "../components/ui/ToggleTheme.astro";
 import ToggleLanguage from "../components/ui/ToggleLanguage.astro";
-import Topbar from "../components/ui/Topbar.astro";
 ---
 
 <html lang="en">
@@ -10,8 +9,7 @@ import Topbar from "../components/ui/Topbar.astro";
     <BaseHead />
   </head>
 
-  <body class="bg-white dark:bg-black relative">
-    <!--<Topbar />-->
+  <body class="bg-white dark:bg-black relative transition-all duration-300">
     <slot />
     <div
       class="md:hidden fixed p-4 bottom-0 w-full flex justify-between z-50 pointer-events-auto"
