--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Header from "../components/landing/Header.astro";
 import Content from "../components/landing/Content.astro";
+import Topbar from "../components/ui/Topbar.astro";
 ---
 
 <BaseLayout>
+  <Topbar />
   <Header />
   <Content />
 </BaseLayout>
