--- a/src/components/landing/Header.astro
+++ b/src/components/landing/Header.astro
@@ -17,17 +17,17 @@
               habilidades sólidas en el diseño, desarrollo y entrega de software
               de alta calidad.
             </p>
-            <p>
-              ¿Quieres contratarme? Puedes ver mis servicios y precios dando
-              click
-              <a
-                href="https://loweffort.notion.site/Bienvenido-emprendedor-b6e0e8635bfd412bab98cb731372e3d9"
-                class="text-sm underline hover:no-underline duration-200 dark:text-white"
-                target="_blank"
-              >
-                aquí
-              </a>
-            </p>
+            <!--<p>-->
+            <!--  ¿Quieres contratarme? Puedes ver mis servicios y precios dando-->
+            <!--  click-->
+            <!--  <a-->
+            <!--    href="https://loweffort.notion.site/Bienvenido-emprendedor-b6e0e8635bfd412bab98cb731372e3d9"-->
+            <!--    class="text-sm underline hover:no-underline duration-200 dark:text-white"-->
+            <!--    target="_blank"-->
+            <!--  >-->
+            <!--    aquí-->
+            <!--  </a>-->
+            <!--</p>-->
           </div>
         </div>
         <div class="mt-8 text-sm font-light">
@@ -39,7 +39,7 @@
             </p>
             <p>
               <span class="text-black dark:text-white">Front-end:</span>
-              HTML, CSS, Javascript, ReactJS, TailwindCSS, Astro, NextJS
+              HTML, CSS, Javascript, ReactJS, Astro, NextJS
             </p>
             <p>
               <span class="text-black dark:text-white">Back-end:</span>
@@ -51,7 +51,7 @@
             </p>
             <p>
               <span class="text-black dark:text-white">Despliegue:</span>
-              Hostinger, Github Pages, Render
+              Hostinger, Github Pages, Render, Vercel
             </p>
           </div>
         </div>
