--- a/src/components/ui/ToggleTheme.astro
+++ b/src/components/ui/ToggleTheme.astro
@@ -2,7 +2,7 @@
 import { Moon, Sun } from "lucide-react";
 ---
 
-<div class="bg-white dark:bg-black">
+<div class="bg-white dark:bg-black z-50">
   <button
     toggle-theme
     class="p-1 rounded border border-neutral-600 hover:bg-neutral-200 dark:invert"
