--- a/src/components/landing/Content/Works.astro
+++ b/src/components/landing/Content/Works.astro
@@ -1,9 +1,15 @@
 ---
 import { works } from "@/data/works.json";
+
+import { getLangFromUrl, useTranslations } from "@/i18n/utils";
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <div class="text-sm font-light">
-  <h3 class="text-black dark:text-white">Trabajos</h3>
+  <h3 class="text-black dark:text-white">
+    {t("hThree")}
+  </h3>
   <div class="grid gap-6 mt-3">
     {
       works.map((template) => (
@@ -11,7 +17,7 @@ import { works } from "@/data/works.json";
           <div class="text-neutral-500  items-start grid grid-cols-1 md:grid-cols-3">
             <div>
               <p class="text-neutral-500 dark:text-neutral-400">
-                {template.status}
+                {template.status ? t("pFinished") : t("pInProgress")}
               </p>
             </div>
             <div class="md:col-span-2 w-full">
