--- a/src/components/ui/ToggleLanguage.astro
+++ b/src/components/ui/ToggleLanguage.astro
@@ -1,12 +1,23 @@
 ---
 import { Languages } from "lucide-react";
+
+import { getLangFromUrl } from "@/i18n/utils";
+let lang = getLangFromUrl(Astro.url);
+
+if (lang === "en") {
+  lang = "es";
+} else {
+  lang = "en";
+}
 ---
 
-<div class="bg-white dark:bg-black">
+<div class="bg-white dark:bg-black z-50">
   <button
     id="toggle-language"
     class="p-1 rounded text-white border border-neutral-600 hover:bg-neutral-200 dark:invert"
   >
-    <Languages size="24" color="#525252" />
+    <a href=`/${lang}`>
+      <Languages size="24" color="#525252" />
+    </a>
   </button>
 </div>
