Update Header Data

--- a/src/components/landing/Header.astro
+++ b/src/components/landing/Header.astro
@@ -28,24 +28,24 @@ const t = useTranslations(lang);
           </p>
           <div class="text-neutral-500 dark:text-neutral-400 space-y-3 mt-3">
             <p>
-              <span class="text-black dark:text-white">Mobile:</span>
-              Android Studio, Kotlin, Firebase, Jetpack Compose
-            </p>
-            <p>
               <span class="text-black dark:text-white">Front-end:</span>
               HTML, CSS, Javascript, ReactJS, Astro, NextJS
             </p>
             <p>
               <span class="text-black dark:text-white">Back-end:</span>
-              NodeJS, Express, Mysql, PostgresSQL, MongoDB, Firebase
+              NodeJS, Ruby on Rails, PostgresSQL, MongoDB, Firebase
+            </p>
+            <p>
+              <span class="text-black dark:text-white">Mobile:</span>
+              Android Studio, Kotlin, Jetpack Compose
             </p>
             <p>
               <span class="text-black dark:text-white">{t("pTwo")}:</span>
-              Hostinger, Github Pages, Render, Vercel
+              AWS, Hostinger, Vercel, Render, Github Pages
             </p>
             <p>
               <span class="text-black dark:text-white">{t("pOne")}:</span>
-              Linux, Git, Neovim, Docker, Figma, Postman, Notion, Google Analytics
+              Linux, Git, Docker, Figma, Postman, Notion, Google Analytics
             </p>
           </div>
         </div>
